<resources>
    <string name="app_name">Postter</string>
    <string name="please_wait">Please wait...</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="successful_registration">Registration successful!</string>
</resources>
