<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_spacing">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_spacing"
            android:layout_marginLeft="@dimen/xlarge_spacing"
            android:text="@string/first_name"
            android:textSize="@dimen/title_text_size" />

        <EditText
            android:id="@+id/et_register_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_spacing"
            android:layout_marginLeft="@dimen/xlarge_spacing"
            android:layout_marginRight="@dimen/xlarge_spacing" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/smaller_spacing"
            android:layout_marginLeft="@dimen/xlarge_spacing"
            android:text="@string/last_name"
            android:textSize="@dimen/title_text_size" />

        <EditText
            android:id="@+id/et_register_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_spacing"
            android:layout_marginLeft="@dimen/xlarge_spacing"
            android:layout_marginRight="@dimen/xlarge_spacing" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_spacing"
            android:layout_marginLeft="@dimen/xlarge_spacing"
            android:text="@string/username"
            android:textSize="@dimen/title_text_size" />

        <EditText
            android:id="@+id/et_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_spacing"
            android:layout_marginLeft="@dimen/xlarge_spacing"
            android:layout_marginRight="@dimen/xlarge_spacing" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/smaller_spacing"
            android:layout_marginLeft="@dimen/xlarge_spacing"
            android:text="@string/password"
            android:textSize="@dimen/title_text_size" />

        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_spacing"
            android:layout_marginLeft="@dimen/xlarge_spacing"
            android:layout_marginRight="@dimen/xlarge_spacing"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/smaller_spacing"
            android:layout_marginLeft="@dimen/xlarge_spacing"
            android:text="@string/email"
            android:textSize="@dimen/title_text_size" />

        <EditText
            android:id="@+id/et_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_spacing"
            android:layout_marginLeft="@dimen/xlarge_spacing"
            android:layout_marginRight="@dimen/xlarge_spacing"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/xlarge_spacing"
            android:background="@color/colorAccent"
            android:text="@string/register" />

    </LinearLayout>

</ScrollView>